# mongo-to-sqlite

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gemfile  LICENSE  README.md  _config.yml  env.example
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: architecture.md  configuration.md  environment_setup.md  examples.md  index.md  quickstart.md  type_mappings.md  usage.md
src/: cli.rs  converter.rs  error.rs  libsql_client.rs  main.rs  migration.rs  mongodb_client.rs  schema.rs
