[package]
name = "mongo-to-sqlite"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI tool to migrate MongoDB databases to SQLite/LibSQL with schema inference"
license = "MIT"
repository = "https://github.com/yourusername/mongo-to-sqlite"
keywords = ["mongodb", "sqlite", "migration", "cli", "database"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "mongo-to-sqlite"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# LibSQL/SQLite
# Enable default features for TLS support (needed for Turso cloud)
libsql = { version = "0.9", features = ["core", "remote"] }

# MongoDB driver
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = { version = "2.9", features = ["chrono-0_4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
chrono = "0.4"
futures = "0.3"
async-stream = "0.3"
indicatif = { version = "0.17", features = ["tokio"] }
colored = "2.1"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.8"
